# mdv.qt

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Makefile  Makefile.dist.linux  Makefile.dist.windows  README.md  RELEASE.md  THEMING.md  cmake_uninstall.cmake  dev.gesslar.mdv.yml  install-dev-desktop.bash  qt.bash
.github/workflows/: release.yml
cmake/: Packaging.cmake  cmake_uninstall.cmake  mdv.nsi.in
docker/: Dockerfile  dist.sh
docs/: THEMING.md  templating.md
examples/: README.md  elements.md  syntax-highlighting.md
resources/: dev.gesslar.mdv.desktop  dev.gesslar.mdv.metainfo.xml.in  mdv.desktop  mdv.rc  resources.qrc
resources/content/: content.qss.template
resources/icons/: mdv.icns
resources/themes/: blackboard.content.json  bubblegum-goth.content.json  cherry-adjacent.content.json  corporate.content.json  sky-diving.content.json  whiteboard.content.json
scripts/: appdir-lint.sh  appimage.sh  excludelist.mdv
scripts/msix/: identity.txt
src/: ChromeStyle.h  CodiconFont.cpp  CodiconFont.h  ContentTheme.cpp  ContentTheme.h  DocumentView.cpp  DocumentView.h  EditorArea.cpp  EditorArea.h  EditorGroup.cpp  EditorGroup.h  EditorPane.cpp  EditorPane.h  FindBar.cpp  FindBar.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  Markdown.cpp  Markdown.h  OutlinePanel.cpp  OutlinePanel.h  PreferencesDialog.cpp  PreferencesDialog.h  TabBar.cpp  TabBar.h  Theme.cpp  Theme.h  TitleBar.cpp  TitleBar.h  WindowsChrome.cpp  WindowsChrome.h  main.cpp
